Changed the template used for the signup page.

--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,4 +1,4 @@
-
-    
-      <main class="main"></main>
-    
+<%- include('../includes/base.ejs') %> 
+<%- include('../includes/header.ejs') %>
+<main class="main"></main>
+<%- include('../includes/end.ejs') %>
