--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,46 @@
-@import url('reset.css');
-@import url('base.css');
-@import url('nav.css');
+@import url("reset.css");
+@import url("base.css");
+@import url("nav.css");
+
+/* * form */
+.forms {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.wrapperInput {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 8px 0;
+}
+.wrapperInput > * {
+  color: antiquewhite;
+  border: none;
+  outline: none;
+  font-size: 16px;
+  font-family: sans-serif;
+  text-transform: uppercase;
+  border-radius: 8px;
+  padding: 4px;
+}
+.input {
+  color: rgb(10, 10, 10);
+}
+.btn {
+  color: rgb(0, 0, 0);
+  border: none;
+  outline: none;
+  font-size: 16px;
+  font-family: sans-serif;
+  text-transform: uppercase;
+  border-radius: 8px;
+  padding: 4px;
+  cursor: pointer;
+}
+/* ERROR */
+.Error {
+  border: 2px solid red;
+}
