--- a/public/css/main.css
+++ b/public/css/main.css
@@ -43,5 +43,11 @@
 }
 /* ERROR */
 .Error {
+  width: 150px;
+  height: 50px;
+  background-color: red;
+  color: aliceblue;
+}
+.invalid {
   border: 2px solid red;
 }
