--- a/public/css/main.css
+++ b/public/css/main.css
@@ -43,10 +43,17 @@
 }
 /* ERROR */
 .Error {
-  width: 150px;
-  height: 50px;
-  background-color: red;
+  display: inline-block;
+  width: auto;
+  height: auto;
+  border-radius: 4px;
+  padding: 8px;
+  background-color: #7e2553;
   color: aliceblue;
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 20px;
+  text-transform: uppercase;
 }
 .invalid {
   border: 2px solid red;
