--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,7 +1,7 @@
 <%- include('../includes/base.ejs') %> <%- include('../includes/header.ejs') %>
 <main class="main">
   <% if(msgErr){ %>
-  <div class="Error"><%= msgErr %></div>
+  <h1 class="Error"><%= msgErr %></h1>
   <% } %>
   <form action="/signUp" method="post" class="forms">
     <div class="wrapperInput">
@@ -14,11 +14,11 @@
     </div>
     <div class="wrapperInput">
       <label for="password">password</label>
-      <input type="password" class="input <%= validateErrors === 'password'?"invalid":''; %> " name="password" value="<%- oldValue.password%>"/>
+      <input type="text" class="input <%= validateErrors === 'password'?"invalid":''; %> " name="password" value="<%- oldValue.password%>"/>
     </div>
     <div class="wrapperInput">
       <label for="confirmPassword">confirm password</label>
-      <input type="password" class="input <%= validateErrors === 'confirmPassword'?"invalid":''; %> " name="confirmPassword" value="<%- oldValue.confirmPassword%>"/>
+      <input type="text" class="input <%= validateErrors === 'confirmPassword'?"invalid":''; %> " name="confirmPassword" value="<%- oldValue.confirmPassword%>"/>
     </div>
     <div>
       <button type="submit" class="btn">SIGNUP</button>
