--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -3,7 +3,7 @@
   <% if(msgErr){ %>
   <h1 class="Error"><%= msgErr %></h1>
   <% } %>
-  <form action="/signUp" method="post" class="forms">
+  <form action="/signup" method="post" class="forms">
     <div class="wrapperInput">
       <label for="name">name</label>
       <input type="text" class="input <%= validateErrors === 'name'?'invalid':''; %> " name="name" value="<%- oldValue.name%>"/>
