--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -53,7 +53,8 @@
         </li>
         <% }else{ %>
         <li class="nav__item">
-          <a href="/logOut" class="nav__item-link">logOut</a>
+          <a href="/logout" class="nav__item-link" onclick="logout(this)">logOut</a>
+          <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
         </li>
         <% } %>
       </div>
