--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -53,7 +53,7 @@
         </li>
         <% }else{ %>
         <li class="nav__item">
-          <a href="/logout"  class="nav__item-link" onclick="logout(this)">logOut</a>
+          <button type="button" class="nav__item-link"onclick="logout(this)">logOut</button>
           <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
         </li>
         <% } %>
