--- a/public/css/main.css
+++ b/public/css/main.css
@@ -31,7 +31,6 @@
   text-transform: lowercase;
 }
 .btn {
-  color: rgb(0, 0, 0);
   border: none;
   outline: none;
   font-size: 16px;
@@ -39,7 +38,12 @@
   text-transform: uppercase;
   border-radius: 8px;
   padding: 4px;
+  color: aliceblue;
   cursor: pointer;
+  background-color: rgba(16, 67, 116, 0.753);
+}
+.btn:hover {
+  background-color: rgba(139, 183, 224, 0.753);
 }
 /* ERROR */
 .Error {
@@ -57,4 +61,42 @@
 }
 .invalid {
   border: 2px solid red;
+}
+/* SHOP CARD */
+.wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border: 1px solid #ccc;
+  padding: 4px;
+  margin: 0 16px;
+  border-radius: 16px;
+}
+.card_item > * {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 8px 4px;
+}
+.card_item > img {
+  width: 150px;
+  height: 200px;
+  border-radius: 8px;
+}
+.card__text {
+  color: antiquewhite;
+  font-family: sans-serif;
+  font-size: 20px;
+  text-transform: uppercase;
+}
+.card_item {
+}
+.card__cart {
 }
