--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -22,6 +22,8 @@
         </div>
         <% }) %>
       </div>
+      <a href="?page=1">1</a>
+      <a href="?page=2">2</a>
     <% }else{ %>
       <h1>NO FOUND PRODUCT</h1>
       <% } %>
