Add pagination to the shop page.

--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -24,6 +24,7 @@
       </div>
       <a href="?page=1">1</a>
       <a href="?page=2">2</a>
+      <a href="?page=3">3</a>
     <% }else{ %>
       <h1>NO FOUND PRODUCT</h1>
       <% } %>
