--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -22,21 +22,22 @@
         </div>
         
         <% }) %>
-        <div class="pagination">
-          <% if(page !== && prevPage !== 1){ %>
-            <a href="?page=1">1</a>
-          <%}%>
-          <% if(hasPrevPage){ %>
-            <a href="?page=<%= prevPage %>"> <%= prevPage %> </a>
+      </div>
+      <div class="pagination">
+        <% if(page !==1 && prevPage !== 1){ %>
+          <a href="?page=1"  class="pagination_link">1</a>
+        <%}%>
+        <% if(hasPrevPage){ %>
+          <a href="?page=<%= prevPage %>"  class="pagination_link"> <%=prevPage%> </a>
+        <% } %>
+        <a href="?page=<%= page %>" class="activePage  pagination_link"><%=page%></a>
+        
+        <% if(hasNxtPage){ %>
+          <a href="?page=<%= nxtPage %>"  class="pagination_link"> <%= nxtPage %> </a>
+        <% } %>
+        <% if (lastPage !== page && nxtPage !== lastPage ){ %>
+          <a href="?page=<%= lastPage %>"  class="pagination_link"><%= lastPage %></a>
           <% } %>
-          <a href="?page=<%= page %>" class="active"><%= page %></a>
-          <% if(hasNxtPage){ %>
-            <a href="?page=<%= nxtPage %>"> <%= nxtPage %> </a>
-          <% } %>
-          <% if (lastPage !== page && nxtPage !== lastPage ){ %>
-            <a href="?page=<%= lastPage %>"> <%= lastPage %> </a>
-            <% } %>
-        </div>
       </div>
     <% }else{ %>
       <h1>NO FOUND PRODUCT</h1>
