add query and params id && edit

--- a/views/admin/admin.ejs
+++ b/views/admin/admin.ejs
@@ -15,7 +15,7 @@
             </div>
             <% if(isAuth){ %>
             <div class="card__cart">
-                <a href="/edit-product" class="btn">EDIT</a>
+                <a href="/edit-product/<%= product._id %>?edit=true" class="btn">EDIT</a>
                 <button class="btn" type="button" onclick="deleteProduct(this)">DELElTE</button>
                 <input type="hidden" name="prodId" value="<%= product._id %>">
                 <input type="hidden" name="_csrf" value="<%= csrfToken %>">
