Update admin.js, delete image file, update public/js/admin.js, update views/shop/add-product.ejs

--- a/views/shop/add-product.ejs
+++ b/views/shop/add-product.ejs
@@ -6,7 +6,7 @@
   <form action="<%= edit?"":"/add-product" %>" method="<%= edit?"":"post" %>" class="forms" enctype="multipart/form-data">
     <div class="wrapperInput">
       <label for="title">title</label>
-      <input type="text" class="input <%= validateErrors === 'title'?'invalid':''; %> " name="title" value="<% if(edit || hasError) {%><%-product.title%><%}%>"/>
+      <input type="text" class="input <%= validateErrors === 'title'?'invalid':''; %> " name="title" value="<% if(edit || hasError) {%><%=product.title%><%}%>"/>
     </div>
     <div class="wrapperInput">
       <label for="imagePath">imagePath</label>
@@ -14,10 +14,10 @@
     </div>
     <div class="wrapperInput">
       <label for="price">price</label>
-      <input type="text" class="input <%= validateErrors === 'price'?"invalid":''; %> " name="price" value="<% if(edit || hasError) {%><%-product.price%><%}%>"/>
+      <input type="text" class="input <%= validateErrors === 'price'?"invalid":''; %> " name="price" value="<% if(edit || hasError) {%><%=product.price%><%}%>"/>
     </div>
     <% if(edit){  %>
-        <input type="hidden" name="prodId" value="<% product._id %>">
+        <input type="hidden" name="prodId" value="<%= product._id %>">
         <% } %>
     <div>
       <button type="<%= edit?"button":"submit" %>" class="btn" <% if(edit){ %> onclick="editProduct(this)" <% } %> > <% if(edit){ %> UPDATE <%}else{ %> Add Product <% } %> </button>
