--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -18,6 +18,7 @@
               <form action="/cart" method="post">
                 <button class="btn" type="submit">Add Cart</button>
                 <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                <input type="hidden" name="prodId" value="<%= product._id %>">
               </form>
             </div>
             <% } %>
