Add a checkout form to the cart page.

--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -25,6 +25,10 @@
         </div>
         
         <% }) %>
+        <form action="/checkOut" method="post" >
+        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+
+        </form>
       </div>
     <% }else{ %>
       <h1>NO FOUND PRODUCT</h1>
