--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -27,7 +27,7 @@
         <% }) %>
         <form action="/checkOut" method="post" >
         <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-
+                <!-- I could not make this section because of the strip filter in Iran! -->
         </form>
       </div>
     <% }else{ %>
